# advent_of_code_2024

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
aoc/: __init__.py
aoc/day1/: day1_a.py  day1_b.py
aoc/day10/: day10_a.py  day10_b.py
aoc/day11/: day11_a.py  day11_b.py
aoc/day12/: day12_a.py  day12_b.py
aoc/day13/: day13_a.py  day13_b.py
aoc/day14/: day14_a.py  day14_b.py
aoc/day15/: day15_a.py  day15_b.py
aoc/day16/: day16.py
aoc/day17/: day17a.py  day17b.py
aoc/day18/: day18a.py  day18b.py
aoc/day19/: day19a.py  day19b.py
aoc/day2/: day2_a.py  day2_b.py
aoc/day20/: day20a.py  day20b.py
aoc/day21/: day21a.py  day21b.py
aoc/day22/: day22a.py  day22b.py
aoc/day23/: day23a.py  day23b.py
aoc/day24/: day24a.py  day24b.py
aoc/day25/: day25a.py
aoc/day3/: day3_a.py  day3_b.py
aoc/day4/: day4_a.py  day4_b.py
aoc/day5/: day5_a.py  day5_b.py
aoc/day6/: day6_a.py  day6_b.py
aoc/day7/: day7_a.py  day7_b.py
aoc/day8/: day8_a.py  day8_b.py
aoc/day9/: day9_a.py  day9_b.py
